// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should show a radio-selected icon when checked 1`] = `
<button
  aria-checked="true"
  class="checkbox css-12bjuvh"
  id="checkbox-3"
  role="checkbox"
>
  <span
    class="icon icon checkbox-selected medium"
    data-icon=""
  />
</button>
`;

exports[`Checkbox should show a radio-unselected icon when not checked 1`] = `
<button
  aria-checked="false"
  class="checkbox css-12bjuvh"
  id="checkbox-5"
  role="checkbox"
>
  <span
    class="icon icon checkbox-unselected medium"
    data-icon=""
  />
</button>
`;
